Fix underscores being hard to read and CI build again

--- a/html/jsonTreeCustom.css
+++ b/html/jsonTreeCustom.css
@@ -3,7 +3,7 @@
   user-select: text;
   padding-inline-start: 8px;
   margin-left: 8px;
-  line-height: 1;
+  line-height: normal;
 }
 .jsontree_label {
   color: rgba(255, 255, 255, 0.8);
